--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,6 @@
             android:name="com.wangshen.daqian.MainActivity">
 
         </activity>
-        <activity
-            android:theme="@style/AppTheme"
-            android:name="com.wangshen.daqian.module.exercise.ui.FindMvpActivity">
-
-        </activity>
         <activity android:name="com.wangshen.daqian.module.start.ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,6 +37,13 @@
         <activity android:name="com.wangshen.daqian.module.start.ui.StartActivity">
 
         </activity>
+        <activity android:name=".module.login.activity.LoginActivity">
+
+        </activity>
+        <meta-data android:name="design_width" android:value="1080">
+        </meta-data>
+        <meta-data android:name="design_height" android:value="1920">
+        </meta-data>
     </application>
 
 </manifest>
